tests/baselines/reference/classExtendsEveryObjectType2.errors.txt
==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendsEveryObjectType2.ts (3 errors) ====
    class C2 extends { foo: string; } { } // error
                     ~
!!! error TS1003: Identifier expected.
    
    class C6 extends []{ } // error
                     ~
!!! error TS1003: Identifier expected.
                       ~
!!! error TS1005: ';' expected.